[soa] feat: fix product full info
