# product-api/docs/swagger.json
@@ -250,12 +250,23 @@
             }
         },
         "/product/full-info": {
-            "get": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "List product filters",
+                        "name": "filter",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ProductFilters"
+                        }
+                    }
                 ],
                 "responses": {
                     "200": {
